@startuml
skinparam classAttributeIconSize 0
class Event {
    date: DateTimeField
    name: CharField
    public: BooleanField
    online: BooleanField
    link: CharField
    protocol: TextField
    guide: TextField
    all_members_can_edit: BooleanField
    getAttachments():list
    uploadtAttachment():event
    deleteAttachment():boolean
}

class User {
username : CharField
first_name : CharField
last_name : CharField
email : CharField
date_joined : DateTimeField
buildCalendar():void
setEventAsFavorite(Event event) : void

}
class Attachment {
    file : File
    upload_date : DateTimeField
    is_image(): boolean
}
class FavoriteEvent {
send_notification():void
}
class AccountCreationToken{
created_at:DateTimeField
used: BooleanField
key:CharField
email:CharField
expiration_time_limit:IntegerField
isValid(): boolean
}
class AuthToken{
key:CharField
created:DateTimeField
generate_key():string
}
class FirebaseMessagingDevice{
device_id:CharField
registration_id:CharField
type:CharField
name:CharField
active:BooleanField
date_created:DateTimeField
send_message():void
}
Event -- FavoriteEvent
User -- FavoriteEvent
Event -- Attachment
Event -- User
FirebaseMessagingDevice -- User
AuthToken -- User
AccountCreationToken -- User
Event o-- User

@enduml